--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  margin: 0;
+  scroll-behavior: smooth;
+ 
+}
+
 html,
 body {
   padding: 0;
@@ -26,7 +32,7 @@ a {
 @layer components {
   .imgWrapper {
     display: grid;
-    grid-column: 1fr 1fr ;
+    grid-column: 1fr 1fr;
     grid-row: auto;
     gap: 40px;
     padding: 0px 40px 0px 40px;
@@ -35,7 +41,7 @@ a {
     width: 200px;
   }
   .contactInput {
-    @apply mt-1 block w-full px-6 py-4 rounded-md border-gray-900 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm
+    @apply mt-1 block w-full px-6 py-4 rounded-md border-gray-900 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm;
   }
   .form {
     display: flex;
@@ -50,11 +56,11 @@ a {
   }
   .input {
     width: 100%;
-      height: 35px;
-      padding: 7px;
-      outline: none;
-      border-radius: 5px;
-      border: 1px solid rgb(220, 220, 220);
+    height: 35px;
+    padding: 7px;
+    outline: none;
+    border-radius: 5px;
+    border: 1px solid rgb(220, 220, 220);
   }
   .input:focus {
     border: 2px solid rgba(0, 206, 158, 1);
@@ -82,8 +88,23 @@ a {
   .textArea:focus {
     border: 2px solid rgba(0, 206, 158, 1);
   }
-
 }
 hr.solid {
   border-top: 3px solid rgb(0, 150, 136);
+}
+#myBtn{
+  background-color: rgb(0, 150, 136);
+  color: white;
+  width: 3vw;
+  height: 3vw;
+  border-radius: 3px;
+  cursor: pointer;
+ transition: all 1000ms;
+}
+#myBtn:hover{
+  background:crimson;
+  
+}
+main{
+  overflow: hidden;
 }
